--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         margin: 10px 0;
         position: relative;
         overflow: hidden;
+        background-color: #000;
       }
 
       #barcode-scanner video {
@@ -43,6 +44,35 @@
 
       #barcode-scanner canvas {
         display: none;
+      }
+
+      .scanner-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        pointer-events: none;
+      }
+
+      .scanner-line {
+        width: 80%;
+        height: 2px;
+        background-color: rgba(255, 0, 0, 0.5);
+        position: relative;
+        animation: scan 2s infinite linear;
+      }
+
+      @keyframes scan {
+        0% {
+          top: -20%;
+        }
+        100% {
+          top: 120%;
+        }
       }
 
       button {
@@ -59,6 +89,11 @@
 
       button:hover {
         background-color: #2980b9;
+      }
+
+      button:disabled {
+        background-color: #95a5a6;
+        cursor: not-allowed;
       }
 
       #product-info {
@@ -93,6 +128,10 @@
       .error {
         color: #e74c3c;
         text-align: center;
+        padding: 10px;
+        background-color: #fadbd8;
+        border-radius: 4px;
+        margin: 10px 0;
       }
 
       #manual-barcode {
@@ -103,33 +142,60 @@
         margin-right: 10px;
         width: 200px;
       }
+
+      .manual-input-container {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      .buttons-container {
+        display: flex;
+        gap: 10px;
+      }
+
+      .product-image-container {
+        text-align: center;
+        margin: 15px 0;
+      }
+
+      #product-image {
+        max-width: 200px;
+        max-height: 200px;
+        border-radius: 8px;
+        display: none;
+      }
     </style>
   </head>
   <body>
     <h1>Сканер КБЖУ продуктов</h1>
 
     <div class="scanner-container">
-      <div id="barcode-scanner"></div>
+      <div id="barcode-scanner">
+        <div class="scanner-overlay">
+          <div class="scanner-line"></div>
+        </div>
+      </div>
 
-      <div>
+      <div class="buttons-container">
         <button id="start-scan">Начать сканирование</button>
         <button id="stop-scan" disabled>Остановить сканирование</button>
       </div>
 
-      <div style="margin-top: 20px">
+      <div class="manual-input-container">
         <input type="text" id="manual-barcode" placeholder="Введите штрих-код вручную" />
         <button id="manual-submit">Поиск</button>
       </div>
     </div>
 
+    <div id="loading" class="loading" style="display: none">Загрузка данных о продукте...</div>
+    <div id="error" class="error" style="display: none"></div>
+
     <div id="product-info" style="display: none">
       <h2 id="product-name"></h2>
-      <img
-        id="product-image"
-        src=""
-        alt="Изображение продукта"
-        style="max-width: 200px; display: none"
-      />
+      <div class="product-image-container">
+        <img id="product-image" src="" alt="Изображение продукта" />
+      </div>
 
       <div class="nutrient">
         <span class="nutrient-name">Калории:</span>
@@ -148,9 +214,6 @@
         <span class="nutrient-value" id="product-carbs"></span>
       </div>
     </div>
-
-    <div id="loading" class="loading" style="display: none">Загрузка данных о продукте...</div>
-    <div id="error" class="error" style="display: none"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/quagga@0.12.1/dist/quagga.min.js"></script>
     <script src="app.js"></script>
